1991
The original example does not compile anymore on 2.9.0.r24324-b20110222020042:

{code}
scala> object C extends B {
     |  override trait T {
     |    def g {  }
     |  }
     |  override def f(x : T) : T = { x.g; x }
     | }
<console>:13: error: illegal combination of modifiers: abstract and override for: trait T
        override trait T {
                       ^
{code}

Is this fixed?
